test/templates/errors/badpage.tmpl
<h1>404 - Page Not Available</h1>
<p> The page you attempted to view cannot be shown to you because
it is in a state where the Wiki cannot properly turn it into HTML.
Please try again later; the problem may be fixed then. </p>
<br>
